[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/FlowNode.gd" type="Script" id=1]
[ext_resource path="res://gui/FlowNodeView.gd" type="Script" id=2]
[ext_resource path="res://gui/FlowNodeEdit.gd" type="Script" id=3]
[ext_resource path="res://gui/FlowNodeStyle.gd" type="Script" id=4]
[ext_resource path="res://gui/FlowNodeConnector.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.176471, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="FlowNode" type="Panel"]
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Edit" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="ID" type="Label" parent="Edit"]
anchor_bottom = 1.0
margin_right = 22.0
text = "1"
align = 1
valign = 1

[node name="Value" type="LineEdit" parent="Edit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
align = 1
placeholder_text = "Value"

[node name="DragHandle" type="Button" parent="Edit"]
anchor_bottom = 1.0
margin_left = -20.0
mouse_default_cursor_shape = 13
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="ConnectOut" parent="Edit" instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -12.0
margin_right = 32.0
margin_bottom = 12.0
custom_styles/panel = SubResource( 2 )

[node name="ConnectIn" parent="Edit" instance=ExtResource( 5 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -12.0
margin_right = -24.0
margin_bottom = 12.0
custom_styles/panel = SubResource( 3 )

[node name="Edit" type="Button" parent="Edit"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = 20.0
toggle_mode = true
text = "Edit"

[node name="EditMenu" type="VBoxContainer" parent="Edit"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0
margin_bottom = 116.0

[node name="ChangeType" type="OptionButton" parent="Edit/EditMenu"]
margin_right = 96.0
margin_bottom = 20.0
text = "Integer"
items = [ "Switch", null, false, 0, null, "Integer", null, false, 1, null, "Decimal", null, false, 2, null, "Percentage", null, false, 3, null, "Short Text", null, false, 4, null ]
selected = 1

[node name="InitalValue" type="SpinBox" parent="Edit/EditMenu"]
margin_top = 24.0
margin_right = 96.0
margin_bottom = 48.0

[node name="Duplicate" type="Button" parent="Edit/EditMenu"]
margin_top = 52.0
margin_right = 96.0
margin_bottom = 72.0
disabled = true
text = "Duplicate"

[node name="Delete" type="Button" parent="Edit/EditMenu"]
margin_top = 76.0
margin_right = 96.0
margin_bottom = 96.0
text = "Delete"

[node name="View" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )

[node name="Style" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )

[connection signal="initial_value_changed" from="Edit" to="." method="_initial_value_changed"]
[connection signal="moved_by" from="Edit" to="." method="_move_by"]
[connection signal="moved_to" from="Edit" to="." method="_move_to"]
[connection signal="type_changed" from="Edit" to="." method="_type_changed"]
[connection signal="button_down" from="Edit/DragHandle" to="Edit" method="_drag"]
[connection signal="button_up" from="Edit/DragHandle" to="Edit" method="_drop"]
[connection signal="start_connection" from="Edit/ConnectOut" to="." method="_start_connection"]
[connection signal="end_connection" from="Edit/ConnectIn" to="." method="_end_connection"]
[connection signal="toggled" from="Edit/Edit" to="Edit" method="_toggle_edit_menu"]
[connection signal="item_selected" from="Edit/EditMenu/ChangeType" to="Edit" method="_new_type_selected"]
[connection signal="value_changed" from="Edit/EditMenu/InitalValue" to="Edit" method="_initial_value_set"]
[connection signal="pressed" from="Edit/EditMenu/Delete" to="." method="_deleted"]
